[package]
name = "env_editor"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
eframe = "0.29"
egui = "0.29"
rfd = "0.14"
rand = "0.8"
ssh2 = { version = "0.9.6", features = ["vendored-openssl"] }
keyring = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[profile.release]
opt-level = 2

