[package]
name = "env_editor"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
eframe = "0.29"
egui = "0.29"
rfd = "0.14"
rand = "0.8"

# --- Neu für SSH/SFTP ---
russh = { version = "0.54", features = ["ring"] }
russh-sftp = "2"
tokio = { version = "1", features = ["rt", "macros", "net", "io-util", "sync", "time"] }
keyring = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[profile.release]
opt-level = 2